# dyndo

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Makefile  README.md  STATE.md  config.yaml  rust-toolchain.toml  rustfmt.toml  skills-lock.json
.agents/skills/code-comment/: SKILL.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/dyndo-cli/: Cargo.toml  README.md
crates/dyndo-cli/src/: descriptor.rs  main.rs  params.rs  track_descriptor.rs
crates/dyndo-cli/tests/: cli.rs
crates/dyndo-core/: Cargo.toml  README.md
crates/dyndo-core/src/: asset.rs  box_reader.rs  cmaf.rs  codec.rs  error.rs  format.rs  header.rs  header_cmaf.rs  header_raw.rs  lib.rs  metadata.rs  model.rs  path.rs  role.rs  segment.rs  segment_utils.rs  test_support.rs  track.rs  track_wire.rs  util.rs
crates/dyndo-core/src/asset/: id.rs  mod.rs  model.rs
crates/dyndo-core/src/cmaf/: boxes.rs  codec.rs  header.rs  mod.rs  segment.rs  stream.rs
crates/dyndo-core/src/dash/: adaptation_set_group.rs  build.rs  compact.rs  mod.rs  timeline.rs
crates/dyndo-core/src/hls/: build.rs  group.rs  mod.rs
crates/dyndo-core/src/model/: id.rs  mod.rs  structure.rs
crates/dyndo-core/src/storage/: fs.rs  memory.rs  mod.rs  s3.rs  source.rs
crates/dyndo-core/src/text/: error.rs  mod.rs  subtitle.rs  subtitle_chunk.rs  vtt.rs  vtt_cue.rs  wvtt.rs
crates/dyndo-core/src/utils/: mod.rs
crates/dyndo-core/tests/: cmaf_probe.rs
crates/dyndo-dash/: Cargo.toml  README.md
crates/dyndo-dash/src/: build.rs  compact.rs  lib.rs
crates/dyndo-hls/: Cargo.toml  README.md
crates/dyndo-hls/src/: build.rs  lib.rs
crates/dyndo-server/: Cargo.toml  README.md
crates/dyndo-server/src/: config.rs  error.rs  lib.rs  main.rs  path.rs  routes.rs  segment.rs  state.rs  tests.rs
crates/dyndo-server/src/routes/: dash.rs  mod.rs  segment.rs  serve.rs  transport.rs
crates/dyndo-server/src/routes/dash/: manifest.rs  mod.rs  segment.rs
docs/: book.toml  notes.md
docs/src/: SUMMARY.md  introduction.md
docs/src/explanation/: segment-index.md  thin-pointer.md  two-protocols.md
docs/src/how-to/: add-subtitles.md  build-from-source.md  deploy-with-docker.md  index-sources.md  label-roles.md  offline-manifests.md  run-the-server.md  serve-from-s3.md
docs/src/reference/: asset-json.md  cli.md  roles.md  server.md
docs/src/reference/cli/: dash.md  hls.md  index.md  pack.md
docs/src/reference/server/: configuration.md  routes.md
docs/src/tutorial/: getting-started.md  install-cli.md
docs/superpowers/plans/: 2026-07-08-dyndo-packager.md
docs/superpowers/specs/: 2026-07-08-dyndo-packager-design.md
scripts/: install.sh  release.sh
tests/fixtures/: sample.vtt  text_sample.vtt
