[workspace]
resolver = "2"
members = ["crates/dyndo-core", "crates/dyndo-dash", "crates/dyndo-cli", "crates/dyndo-server"]

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "deny"

# Groups (e.g. `all`) get negative priority so specific lint overrides win.
[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
