[workspace]
resolver = "2"
members = ["crates/dyndo-core", "crates/dyndo-cli", "crates/dyndo-server"]

[workspace.package]
version = "0.3.4"
edition = "2024"
rust-version = "1.97"

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "deny"

# Groups (e.g. `all`) get negative priority so specific lint overrides win.
[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
# Nursery lint, opted into individually: catches clones the borrow checker
# would have allowed you to skip.
redundant_clone = "deny"
