[package]
name = "dyndo-cli"
version = "0.2.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "dyndo"
path = "src/main.rs"

[dependencies]
dyndo-core = { path = "../dyndo-core" }
opendal = { version = "0.58", default-features = false, features = ["services-fs"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
