[package]
name = "dyndo-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "dyndo"
path = "src/main.rs"

[dependencies]
dyndo-core = { path = "../dyndo-core" }
opendal = { version = "0.58", default-features = false, features = ["services-fs"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
