[package]
name = "dyndo-core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
mp4-atom = "0.12.1"
opendal = { version = "0.58.0", default-features = false, features = ["services-fs"] }
relative-path = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
