[package]
name = "dyndo-core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
bytes = "1"
dash-mpd = { version = "0.20", default-features = false }
hls_m3u8 = "0.7"
mp4-atom = "0.12.1"
opendal = { version = "0.58.0", default-features = false, features = ["services-fs"] }
quick-xml = { version = "0.40", features = ["serialize"] }
relative-path = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
