[package]
name = "dyndo-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bytes = "1"
dash-mpd = { version = "0.20", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
hls_m3u8 = "0.7"
mp4-atom = { version = "0.12.1", features = ["tokio"] }
opendal = { version = "0.58.0", default-features = false, features = ["services-fs"] }
quick-xml = { version = "0.40", features = ["serialize"] }
relative-path = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
