[package]
name = "dyndo-server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "dyndo-server"
path = "src/main.rs"

[dependencies]
dyndo-core = { path = "../dyndo-core" }
dyndo-dash = { path = "../dyndo-dash" }
opendal = { version = "0.58", default-features = false, features = ["services-fs"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
